--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 asgiref==3.7.2
+Babel==2.12.1
 beautifulsoup4==4.12.2
 Django==4.2.5
 django-bootstrap-v5==1.0.11
+django-js-asset==2.1.0
+django-money==3.2.0
+django-mptt==0.14.0
 psycopg2-binary==2.9.7
+py-moneyed==3.0
 python-dotenv==1.0.0
 soupsieve==2.5
 sqlparse==0.4.4
+typing_extensions==4.7.1
 tzdata==2023.3
 whitenoise==6.5.0
